2nd commit - code updated

--- a/my-project/test1.html
+++ b/my-project/test1.html
@@ -1,1 +1,8 @@
-<h1>Hello, this is Dat Nguyen</h1>
+<!DOCTYPE html>
+<head>
+    <title>Lab 1 page</title>
+</head>
+<body>
+    <h1>Hello, this is Dat Nguyen</h1>>
+    <p>Git and Github help a lot.</p>
+</body>
